# PlusMinusTracker

./: .gitignore  2023-07-08Away_plusminus.csv  2023-07-08TMU_plusminus.csv  LICENSE  README.md  app.py  app_test.py  app_working.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
plusminus/rosters/: iowa.csv  south_carolina.csv
plusminus/utils/: utils.py
